add data analysis part to out notebook

--- a/Global_terrorism_dataset.ipynb
+++ b/Global_terrorism_dataset.ipynb
@@ -33,7 +33,7 @@
     }
    ],
    "source": [
-    "raw = pd.read_csv('./globalterrorismdb_0718dist.csv')"
+    "raw = pd.read_csv('./Global_terrorism.csv')"
    ]
   },
   {
